Changed data for projects summer 2018

--- a/views/components/projects.pug
+++ b/views/components/projects.pug
@@ -9,6 +9,7 @@ section
 					li  Personal 
 						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
 					li npm module 
+					li bagelbone 
 
 		.container-projects.right-projects
 			.content-projects
