Added Projects content

--- a/views/components/projects.pug
+++ b/views/components/projects.pug
@@ -9,19 +9,23 @@ section
 					li  Personal 
 						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
 					li npm module 
-					li bagelbone 
+					li bagelbone board programming 
+						strong Embedded system programming.
 
 		.container-projects.right-projects
 			.content-projects
 				h2 2018 Spring 
 				ul 
-					li  Personal 
-						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+					li Western Engineering Competition | 
+						strong Train Simulator 
+						a(href="https://github.com/yvadher/TrainSim") Project
+					li Linux Kernel Patch 
+					li Thread programming in C
+				
 
 		.container-projects.left-projects
 			.content-projects
 				h2 2017 Fall 
-				
 				.post
 					article
 						.flex-container
@@ -29,44 +33,42 @@ section
 								img.projectImg(src="../img/pic01.jpg" alt="")
 							a.image(href="#")
 								img.projectImg(src="../img/pic02.jpg" alt="")
-						h3 Interdum aenean
-						p
-							| Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+						ul 
+							li goTalk
+								a(href="https://github.com/yvadher/cmpt275App")  IOS app 
+								| for autistic children 
+							li Zedbord Real time system programming 
+							li 
+								a(href="https://github.com/yvadher/BridgeLift-simmulator") Bridge Lift Simulator
+						
 						ul.actions
 							li
 								a.button(href="#") More
 
 		.container-projects.right-projects
 			.content-projects
-				h2 2017 Summer 
+				h2 2017  
 				ul 
-					li  Personal 
-						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+					li Raspbery pi IoT using 
+						a(href="https://developer.android.com/things/") android things 
+					li TalkoMo React Native mobile app for demoing chat in react-native
+					li 
+						a(href="https://github.com/yvadher/noteMaster") NoteMaster 
+						|  cloud synchronized react app 
+				ul.actions
+					li
+						a.button(href="#") More
 
 		.container-projects.left-projects
 			.content-projects
-				h2 2017 Spring 
+				h2 2016  
 				ul 
 					li  Personal 
 						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
 
 		.container-projects.right-projects
 			.content-projects
-				h2 2016 Fall 
-				ul 
-					li  Personal 
-						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
-
-		.container-projects.left-projects
-			.content-projects
-				h2 2016 Summer 
-				ul 
-					li  Personal 
-						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
-
-		.container-projects.right-projects
-			.content-projects
-				h2 2016 Spring 
+				h2 2015 
 				ul 
 					li  Personal 
 						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
