--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -9,15 +9,16 @@
   margin: 0 auto;
   ul 
 	{
-		color: black;
 		li {
-			color:black;
 			font-weight: 400;
 			font-size: 110%;
       text-decoration: none;
       a {
         color: black;
         font-weight: 700;
+      }
+      .button{
+        margin: 13px;
       }
 		}
 	}
@@ -145,7 +146,11 @@
 .flex-container{
 	display: flex;
 	align-content: center;
-	justify-content: center;
+  justify-content: center;
+  img{
+    padding: 4px;
+    margin-bottom: 5px;
+  }
 }
 
 .projectImg{
