Changed sidebar content

--- a/views/components/sidebar.pug
+++ b/views/components/sidebar.pug
@@ -1,73 +1,64 @@
 section#sidebar
-        .inner
-          // Search
-          section#search.alt
-            form(method="post" action="#")
-              input#query(type="text" name="query" placeholder="Search")
-          // Menu
-          nav#menu
-            header.major
-              h2 Menu
-            ul
-              li
-                a(href="index.html") Homepage
-              li
-                span.opener Submenu
-                ul
-                  li
-                    a(href="#") Lorem Dolor
-                  li
-                    a(href="#") Ipsum Adipiscing
-                  li
-                    a(href="#") Tempus Magna
-                  li
-                    a(href="#") Feugiat Veroeros
-              li
-                a(href="#") Etiam Dolore
-              li
-                span.opener Another Submenu
-                ul
-                  li
-                    a(href="#") Lorem Dolor
-                  li
-                    a(href="#") Ipsum Adipiscing
-                  li
-                    a(href="#") Tempus Magna
-                  li
-                    a(href="#") Feugiat Veroeros
-              li
-                a(href="#") Maximus Erat
-          // Section
-          section
-            header.major
-              h2 Ante interdum
-            .mini-posts
-              article
-                a.image(href="#")
-                  img(src="../img/pic07.jpg" alt="")
-                p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
-              article
-                a.image(href="#")
-                  img(src="../img/pic08.jpg" alt="")
-                p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
-              article
-                a.image(href="#")
-                  img(src="../img/pic09.jpg" alt="")
-                p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
-            ul.actions
-              li
-                a.button(href="#") More
-          // Section
-          section
-            header.major
-              h2 Get in touch
-            p
-              | Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-            ul.contact
-              li.fa-envelope-o
-                a(href="#") information@untitled.tld
-              li.fa-phone (000) 000-0000
-              li.fa-home
-                | 1234 Somewhere Road #8254
-                br
-                | 										Nashville, TN 00000-0000
+	.inner
+		//- // Search
+		section#search.alt
+		//- 	form(method="post" action="#")
+		//- 		input#query(type="text" name="query" placeholder="Search")
+		nav#menu
+			header.major
+				h2 Menu
+			ul
+				li
+					a(href="index.html") Homepage
+				li
+					a(href="#") Summery Of Skills
+				//- li
+				//- 	span.opener Another Submenu
+				//- 	ul
+				//- 	li
+				//- 		a(href="#") Lorem Dolor
+				//- 	li
+				//- 		a(href="#") Ipsum Adipiscing
+				//- 	li
+				//- 		a(href="#") Tempus Magna
+				//- 	li
+				//- 		a(href="#") Feugiat Veroeros
+				li
+					a(href="#") Professional Work Experience 
+				li 
+					a(href="#") Technical Projects
+				li 
+					a(href="#") Non Technical Work experience
+				li 
+					a(href="#") Education
+				li 
+					a(href="#") Awards
+			
+				//- // Section
+				//- section
+				//- 	header.major
+				//- 		h2 Ante interdum
+				//- 	.mini-posts
+				//- 	article
+				//- 		a.image(href="#")
+				//- 			img(src="../img/pic07.jpg" alt="")
+				//- 		p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
+				//- 	article
+				//- 		a.image(href="#")
+				//- 			img(src="../img/pic08.jpg" alt="")
+				//- 		p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
+				//- 	article
+				//- 		a.image(href="#")
+				//- 			img(src="../img/pic09.jpg" alt="")
+				//- 		p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
+				//- 	ul.actions
+				//- 	li
+				//- 		a.button(href="#") More
+		// Section
+		section.bottom-styles
+			header
+				h2 Get in touch
+			ul.contact
+				li.fa-envelope-o
+					a(href="#") yvadher@sfu.ca
+		
