Adding change in banner.pug

--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -5,7 +5,7 @@ section#banner
                 | Hi, I'm Yagnik 
             p Enthusiastic | Impactfull | Problem solver
         p
-            | Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.
+            | Yagnik is an avid computer engineering student with a passion for software systems. Yagnik codes mainly in Javascript with Angular framework, Python and C/C++. With co-op work experience in both IoT firmware projects and backend system software, he has developed a great software background. Yagnik has also worked with machine learning, and has diverse experience in software technologies.
         //- ul.actions
         //-   li
         //-     a.button.big(href="#") Learn More
